--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+    "start": "parcel index.html",
+    "build": "rm -rf docs && parcel build index.html -d docs --public-url ./"
+   },
   "keywords": [],
   "author": "",
   "license": "ISC",
